tests/ifcc-test-output/testfiles-init-4_error/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:10: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before numeric constant
    2 |    int a 42;
      |          ^~
input.c:2:10: warning: statement with no effect [-Wunused-value]
input.c:3:11: error: ‘a’ undeclared (first use in this function)
    3 |    return a;
      |           ^
input.c:3:11: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
